--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "dev": "nodemon --inspect index.js",
+    "start": "node index.js",
     "migration:down": "node util/rollback.js"
   },
   "author": "",
